# Fractals

./: Fractals.cabal  README.org  flake.nix  hie.yaml  result  test.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: f1lkyfbgvd41ragxd15l1p57xc62fj2s-source  kmgj7l5ylrwff49z0n22jldmx7dk10z1-source  p9gcsqgvicfkkavm15z1i28w1q3skjpn-source
app/: Coefficients.hs  Fractal.hs  Graph.hs  Main.hs  Solver.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
