cabal-version:      2.4
name:               Fractals
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Will
maintainer:         wveatchw@gmail.com

build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

executable Fractals
    main-is:          Main.hs

    hs-source-dirs:   app
    -- Modules included in this executable, other than Main.
    other-modules:    Solver
                    , Fractal
                    , Graph
                    , Coefficients

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , random
                    , Chart
                    , Chart-cairo
                    , gtk2hs-buildtools
                    , gtk
                    , colour
                    , data-default-class
                    , lens
                    , extra
                    , transformers
    default-language: Haskell2010
